--- a/index.html
+++ b/index.html
@@ -1,156 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guilherme & Marcella — 09/05/2026</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    header { padding: 40px 20px; }
-    h1 { font-size: 2.5rem; margin-bottom: 10px; letter-spacing: 2px; }
-    h2 { font-size: 1.2rem; font-weight: 300; color: #ccc; }
-
-    /* Foto do casal */
-    .foto-casal {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #fff;
-      margin-bottom: 20px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.15);
-    }
-
-    section { max-width: 800px; margin: 60px auto; }
-    .mapa iframe { width: 100%; height: 350px; border: 0; border-radius: 8px; }
-
-    ul { list-style: none; padding: 0; }
-    li {
-      margin: 10px 0; padding: 12px 18px; border: 1px solid #444;
-      border-radius: 10px; background: #111; font-size: 1.1rem;
-    }
-
-    input, select {
-      padding: 12px; border-radius: 6px; border: 1px solid #444;
-      background: #111; color: #fff;
-    }
-
-    button {
-      padding: 12px 20px; font-size: 1rem; border: none;
-      border-radius: 8px; background: #fff; color: #000;
-      cursor: pointer; font-weight: bold;
-    }
-
-    #painel { margin-top: 40px; text-align: left; background:#111; padding:20px; border-radius:10px; }
-    footer { margin-top: 80px; font-size: 0.9rem; color: #999; }
-
-    /* MOBILE */
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      h2 { font-size: 1rem; }
-      section { margin: 40px auto; padding: 0 10px; }
-      .foto-casal { width: 130px; height: 130px; }
-      button { width: 100%; }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guilherme + Marcella</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <img src="FOTO_DO_CASAL.jpg" alt="Guilherme e Marcella" class="foto-casal" />
-    <h1>Guilherme & Marcella</h1>
-    <h2>Casamento — 9 de maio de 2026</h2>
-  </header>
 
-  <section>
-    <h2>Local da Cerimônia</h2>
-    <p>Insira aqui a descrição do local.</p>
-    <div class="mapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.883796771178!2d-46.656573!3d-23.5733382" allowfullscreen loading="lazy"></iframe>
+<header>
+    <nav>
+        <a href="#casal">O Casal</a>
+        <a href="#cerimonia">Cerimônia</a>
+        <a href="#presentes">Lista de Presentes</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h1>GUILHERME + MARCELLA</h1>
+
+    <div class="galeria">
+        <img src="img/foto1.jpg">
+        <img src="img/foto2.jpg">
+        <img src="img/foto3.jpg">
     </div>
-  </section>
 
-  <section>
-    <h2>Lista de Presentes</h2>
-    <ul>
-      <li>Exemplo de presente 1 — <a href="#" style="color:#fff;">link</a></li>
-      <li>Exemplo de presente 2 — <a href="#" style="color:#fff;">link</a></li>
-    </ul>
-  </section>
+    <h2>09.05.2026</h2>
+</section>
 
-  <section>
-    <h2>Contribuição via Pix</h2>
-    <p>Clique para gerar o QR Code Pix.</p>
-    <button onclick="gerarPix()">Gerar QR Code Pix</button>
-    <div id="pixArea" style="margin-top:20px;"></div>
-  </section>
-
-  <section>
-    <h2>Confirmação de Presença (RSVP)</h2>
-    <form onsubmit="event.preventDefault(); enviarRSVP();" style="display:flex; flex-direction:column; gap:12px; max-width:350px; margin:0 auto;">
-      <input type="text" id="nome" placeholder="Seu nome" required />
-      <input type="email" id="email" placeholder="Seu email" required />
-      <select id="presenca" required>
-        <option value="">Você vai?</option>
-        <option value="Sim">Sim</option>
-        <option value="Não">Não</option>
-      </select>
-      <button type="submit">Enviar</button>
-    </form>
-    <div id="rsvpMsg" style="margin-top:20px;"></div>
-
-    <div id="painel">
-      <h3>Painel de RSVPs</h3>
-      <ul id="listaRSVP"></ul>
+<section class="countdown-section">
+    <h3>CONTAGEM REGRESSIVA</h3>
+    <div id="countdown">
+        <div><span id="dias"></span>Dias</div>
+        <div><span id="horas"></span>Horas</div>
+        <div><span id="minutos"></span>Min</div>
+        <div><span id="segundos"></span>Seg</div>
     </div>
-  </section>
+</section>
 
-  <footer>Com carinho para o nosso grande dia ♥</footer>
+<section id="casal" class="casal">
+    <h2>O CASAL</h2>
+    <p>História do casal aqui...</p>
+</section>
 
-  <script>
-    const chavePix = '97427455-6f14-4aba-aa09-d1cb15de34d4';
-    const registros = [];
+<section id="cerimonia" class="cerimonia">
+    <h2>CERIMÔNIA</h2>
+    <p>Data, horário e local da cerimônia.</p>
 
-    function gerarPix() {
-      const nome = 'Guilherme e Marcella';
-      const valor = '0.00';
-      const payload = `00020126580014BR.GOV.BCB.PIX0136${chavePix}5204000053039865405${valor}5802BR5913${nome}6009SAO PAULO62070503***6304`;
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=..."
+        width="100%" height="300" style="border:0;" allowfullscreen="">
+    </iframe>
+</section>
 
-      const url = 'https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=' + encodeURIComponent(payload);
+<section id="presentes" class="presentes">
+    <h2>LISTA DE PRESENTES</h2>
 
-      document.getElementById('pixArea').innerHTML = `
-        <p>Use o QR Code abaixo:</p>
-        <img src="${url}" />
-      `;
-    }
+    <div class="grid-presentes">
+        <div class="item">
+            <img src="img/presente1.jpg">
+            <p>Adega 28 Garrafas</p>
+            <button>Presentear</button>
+        </div>
 
-    function enviarRSVP() {
-      const nome = document.getElementById('nome').value;
-      const email = document.getElementById('email').value;
-      const presenca = document.getElementById('presenca').value;
+        <div class="item">
+            <img src="img/presente2.jpg">
+            <p>Aparelho de jantar</p>
+            <button>Presentear</button>
+        </div>
+    </div>
+</section>
 
-      registros.push({ nome, email, presenca });
+<script src="script.js"></script>
 
-      document.getElementById('rsvpMsg').innerHTML = `<p>Obrigado, ${nome}! Sua resposta foi registrada.</p>`;
-
-      atualizarPainel();
-    }
-
-    function atualizarPainel() {
-      const lista = document.getElementById('listaRSVP');
-      lista.innerHTML = '';
-      registros.forEach(r => {
-        const li = document.createElement('li');
-        li.textContent = `${r.nome} — ${r.presenca}`;
-        lista.appendChild(li);
-      });
-    }
-  </script>
 </body>
 </html>
