--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <section id="casal" class="casal">
 <h2>O CASAL</h2>
-<p>História do casal...</p>
+<p>História do casal..</p>
 </section>
 
 <section id="cerimonia" class="cerimonia">
