--- a/index.html
+++ b/index.html
@@ -274,15 +274,21 @@ nav a:hover {
     <p style="font-weight:300;">História do casal...</p>
 </section>
 
-<!-- ==================== CERIMÔNIA + MAPA ==================== -->
+<!-- Seção Cerimônia com mapa incorporado -->
 <section id="cerimonia">
     <h2>CERIMÔNIA</h2>
-    <p style="font-weight:300;">Local, horário, traje...</p>
+    <p style="font-weight:300;">Local, horário, traje, etc.</p>
 
-    <!-- Mapa incorporado -->
-    <iframe class="mapa"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.392969..."
-        loading="lazy"></iframe>
+    <iframe
+      class="mapa"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.342224226003!2d-46.707329!3d-20.7442381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b6dd180f1ce179%3A0x5ebf5c93b03199e1!2sCasa%20A%20Eventos!5e0!3m2!1spt-BR!2sbr!4v1697700000000!5m2!1spt-BR!2sbr"
+      width="100%"
+      height="350"
+      style="border:0; border-radius:20px;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 </section>
 
 <!-- ==================== PRESENTES ==================== -->
