--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ th, td{ border:1px solid #eee; padding:8px; text-align:left; }
   <div class="container">
     <h1>GUILHERME + MARCELLA</h1>
     <div class="galeria" aria-hidden="true">
-      <img src="/mnt/data/c8058528-4991-46fb-be7f-fb4eb2573ea5.png" alt="Foto casal 1">
-      <img src="img/foto2.jpg" alt="Foto casal 2">
-      <img src="img/foto3.jpg" alt="Foto casal 3">
+      <img src="img/foto1.jpeg" alt="Foto casal 1">
+      <img src="img/foto2.jpeg" alt="Foto casal 2">
+      <img src="img/foto3.jpeg" alt="Foto casal 3">
     </div>
     <h2>09.05.2026</h2>
   </div>
