--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ th, td{ border:1px solid #eee; padding:8px; text-align:left; }
 <section id="casal" style="animation-delay:0.12s;">
   <div class="container">
     <h2>O CASAL</h2>
-    <p style="font-weight:300;">História do casal...</p>
+    <p style="font-weight:300;">Histórias de amor existem, e, às vezes, nem nós mesmos acreditamos todo o tempo que já estamos juntos. Porém, o brilho intenso e apaixonado dos nossos olhares nos fazem lembrar o porquê de chegarmos até aqui sem sentir tanto o tempo passar....Vamos nos casar! Estamos preparando tudo com muito carinho para curtirmos cada momento com nossos amigos e familiares queridos!</p>
   </div>
 </section>
 
@@ -114,7 +114,7 @@ th, td{ border:1px solid #eee; padding:8px; text-align:left; }
 <section id="cerimonia" style="animation-delay:0.14s;">
   <div class="container">
     <h2>CERIMÔNIA</h2>
-    <p style="font-weight:300;">Local, horário, traje, etc.</p>
+    <p style="font-weight:300;">Gostaríamos muito de contar com a presença de todos vocês no momento em que nossa união será abençoada diante de Deus! A cerimônia será rápida e tentaremos ser extremamente pontuais. Contamos com vocês! Dia 9 de maio de 2026, às 16h. Casa A Eventos, Rodovia MG-050. Passos - MG</p>
 
     <iframe class="mapa"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1887.342224226003!2d-46.707329!3d-20.7442381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b6dd180f1ce179%3A0x5ebf5c93b03199e1!2sCasa%20A%20Eventos!5e0!3m2!1spt-BR!2sbr!4v1697700000000!5m2!1spt-BR!2sbr"
