--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ section .container{ padding-top:6px; padding-bottom:6px; }
 .item p{ margin:0 0 8px; color:#333; font-weight:300; }
 .item small{ display:block; margin-bottom:8px; color:#666; }
 .btn{ display:inline-block; background:#000; color:#fff; border:none; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
-.btn-ghost{ display:inline-block; background:#000; color:#000; border:none; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
+.btn-ghost{ display:inline-block; background:#fff; color:#000; border:none; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
 #rsvp{ text-align:center; padding-bottom:18px; }
 .botao-rsvp{ background:#000; color:#fff; padding:14px 32px; border-radius:10px; font-weight:300; border:none; cursor:pointer; }
 .modal-bg{ position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); z-index:80; }
@@ -140,7 +140,6 @@ th, td{ border:1px solid #eee; padding:8px; text-align:left; }
     <h2>Confirmar Presença</h2>
     <p style="font-weight:300; margin-bottom:14px;">Clique em confirmar para abrir o formulário.</p>
     <button class="botao-rsvp" onclick="abrirModalRSVP()">CONFIRMAR</button>
-    <p style="margin-top:10px; font-size:13px; color:#666">Você também pode pressionar a tecla <strong>A</strong> para abrir o painel administrativo (somente para vocês, senha exigida).</p>
   </div>
 </section>
 
@@ -157,7 +156,7 @@ th, td{ border:1px solid #eee; padding:8px; text-align:left; }
       <input type="text" id="telefone" placeholder="Telefone (WhatsApp preferencial)" required>
       <textarea id="nomes" placeholder="Nomes dos acompanhantes (1 por linha)" rows="4" required></textarea>
       <select id="presenca" required>
-        <option value="">Você irá?</option>
+        <option value="">Vocês irão?</option>
         <option value="sim">Sim — iremos</option>
         <option value="nao">Não — não iremos</option>
       </select>
@@ -262,7 +261,7 @@ const presentes = [
     descricao: "Jogo de Panela de Cerâmica Duo Smart 5 Peças - Chocolate",
     img: "img/presente1.jpg",
     link: "https://www.compreaqui.ceraflame.com.br/duo/jogo-de-panela-de-ceramica-duo-smart-5-pecas-chocolate?parceiro=4484&gad_source=1&gad_campaignid=22958254766&gbraid=0AAAABBP71gGyAU9NSvZOyPc5H3HebFTUD&gclid=CjwKCAiAlfvIBhA6EiwAcErpyS2rKj6AKlCpnPa69GqqctQc4SpmmP-Tjplccju39Zjpk_CCxRTviBoCe3EQAvD_BwE",
-    endereco: "Rua Araxá, 316, Passos - MG",
+    endereco: "Rua Araxá, 316, Passos - MG 37900-002",
     status: "Disponivel"
   },
   {
@@ -270,7 +269,7 @@ const presentes = [
     descricao: "Ar-Condicionado Portátil Electrolux 12.000 BTUS Frio com Wi-fi Branco (SP12F) - 220V",
     img: "img/presente2.jpg",
     link: "https://www.casasbahia.com.br/ar-condicionado-portatil-electrolux-12000-btus-frio-com-wi-fi-branco-sp12f/p/1571322381?utm_medium=Cpc&utm_source=GP_PLA&IdSku=1571322381&idLojista=24506&tipoLojista=3P&gclsrc=aw.ds&&utm_campaign=cb_mkp_gg_shopping_long_arve_sellers_toplojistas&gad_source=1&gad_campaignid=22819970585&gbraid=0AAAAADtAamihozrzxbKnx0t4sXbnhTjry&gclid=CjwKCAiAlfvIBhA6EiwAcErpyexZvZ-lBSk2Z0666Big-MDCNwEvyx4lv-E4BbZDwuwmP59ERydPxBoCxgYQAvD_BwE",
-    edereco: "Rua Araxá, 316, Passos - MG",
+    edereco: "Rua Araxá, 316, Passos - MG 37900-002",
     status: "Disponivel"
   },
   {
@@ -278,7 +277,7 @@ const presentes = [
     descricao: "Robô Apirador de Pó Electrolux Home-E Ultra Experience com Autonomous Technology ERB40 Bivolt",
     img: "img/presente3.jpg",
     link: "https://www.amazon.com.br/Electrolux-Experience-Autonomous-Technology-ERB40/dp/B09SVQ4KHC/ref=asc_df_B09SVQ4KHC?mcid=cc48b2616e19381683bbc08c641477a5&tag=googleshopp00-20&linkCode=df0&hvadid=709968341038&hvpos=&hvnetw=g&hvrand=6294806805474517233&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9074180&hvtargid=pla-2202491347191&psc=1&language=pt_BR&gad_source=1",
-    edereco: "Rua Araxá, 316, Passos - MG",
+    edereco: "Rua Araxá, 316, Passos - MG 37900-002",
     status: "Disponivel"
   },  
   {
@@ -286,7 +285,7 @@ const presentes = [
     descricao: "Lava Louças Brastemp 8 Serviços Preta - BLF08AE",
     img: "img/presente4.jpg",
     link: "https://www.brastemp.com.br/lava-loucas-brastemp-8-servicos-preta-blf08ae/p?idsku=326125408&gad_source=1&gad_campaignid=21164263367&gbraid=0AAAAADJ0BqrnDH62jWGt8k6s2OibdJmok&gclid=CjwKCAiAlfvIBhA6EiwAcErpyT-I0greM2uy8yExsyYryFyhHYXyrDQGN0F8kX5IYjL6wKohV8zsqBoCEjYQAvD_BwE",
-    edereco: "Rua Araxá, 316, Passos - MG",
+    edereco: "Rua Araxá, 316, Passos - MG 37900-002",
     status: "Disponivel"
   },
     {
@@ -294,7 +293,7 @@ const presentes = [
     descricao: "Qualquer valor contribui com a viagem dos noivos.",
     img: "img/presente5.jpg",
     link: "https://www.tripadvisor.com.br/Tourism-g147293-Punta_Cana_La_Altagracia_Province_Dominican_Republic-Vacations.html",
-    edereco: "Rua Araxá, 316, Passos - MG",
+    edereco: "Rua Araxá, 316, Passos - MG 37900-002",
     status: "Disponivel"
   },
 ];
