--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ section .container{ padding-top:6px; padding-bottom:6px; }
 .item h3{ margin:10px 0 6px; font-weight:400; }
 .item p{ margin:0 0 8px; color:#333; font-weight:300; }
 .item small{ display:block; margin-bottom:8px; color:#666; }
-.btn{ display:inline-block; background:#000; color:#fff; border:none; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
+.btn{ display:inline-block; background:#000; color:#fff; border:2px; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
 .btn-ghost{ background:#fff; color:#000; border:2px solid #000; padding:12px 16px; border-radius:10px; cursor:pointer; font-weight:300; }
 #rsvp{ text-align:center; padding-bottom:18px; }
 .botao-rsvp{ background:#000; color:#fff; padding:14px 32px; border-radius:10px; font-weight:300; border:none; cursor:pointer; }
